src/objects/Response_Evaluation_Form__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalURL__c</fullName>
        <label>ApprovalURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Best_overall_Response_to_date__c</fullName>
        <label>Response Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete Response (CR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Response (PR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable Disease (SD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progressive Disease (PD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not adequately assessed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Breast_Conserv_Snomed__c</fullName>
        <label>Breast Conserv Snomed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>Response Evaluation Forms</relationshipLabel>
        <relationshipName>Response_Evaluation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Staging_Period__c</fullName>
        <label>Clinical Staging Period</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clinically_staging_period_M__c</fullName>
        <label>Clinically staging period M</label>
        <picklist>
            <picklistValues>
                <fullName>M0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clinically_staging_period_N__c</fullName>
        <label>Clinically staging period N</label>
        <picklist>
            <picklistValues>
                <fullName>N0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N2a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N2b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N3a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N3b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N3c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clinically_staging_period_T__c</fullName>
        <label>Clinically staging period T</label>
        <picklist>
            <picklistValues>
                <fullName>T0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T1a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T1b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T1c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T1mi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete_response_CR_Date__c</fullName>
        <label>Complete response (CR)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete_response_CR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete response (CR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_status_of_T4_tumor__c</fullName>
        <label>Current Status of T4 Tumor</label>
        <picklist>
            <picklistValues>
                <fullName>Skin only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chest wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin and chest wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inflammatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Skin involvement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_clinical_assessment__c</fullName>
        <label>Date of clinical assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disease_Extent__c</fullName>
        <label>Disease Extent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distant__c</fullName>
        <label>Distant</label>
        <picklist>
            <picklistValues>
                <fullName>Contralateral Breast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distant Lymph Nodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pleura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distant skin and subcutaneous tissue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bone Marrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brain / CNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pieura</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCandidateForConservationSurgery__c</fullName>
        <label>Is Candidate For Conservation Surgery</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Regional__c</fullName>
        <label>Local-Regional</label>
        <picklist>
            <picklistValues>
                <fullName>Axillary Nodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chest Wall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infraclavicular nodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal mammary nodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ipsilateral Breast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>local-regional skin and subcutaneous tis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supraclavicular nodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>skin and subcutaneous tissue</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Matted_nodes__c</fullName>
        <label>Matted nodes</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_distant_progression_Date__c</fullName>
        <label>New distant progression Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_distant_progression__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New distant progression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_local_regional_recurrence_Date__c</fullName>
        <label>New local- regional recurrence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_local_regional_recurrence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New local- regional recurrence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nodes_fixed_to_chest_wall__c</fullName>
        <label>Nodes fixed to chest wall</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>Response_Evaluation_Form__c</referenceTo>
        <relationshipLabel>Response Evaluation Forms</relationshipLabel>
        <relationshipName>Response_Evaluation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherReason__c</fullName>
        <label>OtherReason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other Distant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Palpable_nodes__c</fullName>
        <label>Palpable nodes</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partial_response_PR_Date__c</fullName>
        <label>Partial response (PR)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partial_response_PR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial response (PR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReasonNoSurg_PTx_Snomed__c</fullName>
        <label>ReasonNoSurg_PTx_Snomed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonNotConservationSurgeryCandidate__c</fullName>
        <label>ReasonNotConservationSurgeryCandidate</label>
        <picklist>
            <picklistValues>
                <fullName>Multi-centric disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inflammatory disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diffuse micro calcifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient choice/family history</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional norm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific anatomy of primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting__c</fullName>
        <label>Reporting Period</label>
        <picklist>
            <picklistValues>
                <fullName>Baseline</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-regimen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-surgery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_CRF_Id__c</fullName>
        <label>Root CRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_of_largest_node__c</fullName>
        <label>Size of largest node</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who is sign and submitting the record</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Response_Evaluation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestHarnessId__c</fullName>
        <externalId>true</externalId>
        <label>TestHarnessId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Response Evaluation Forms</relationshipLabel>
        <relationshipName>Response_Evaluation_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_lymph_node_involvement__c</fullName>
        <label>Type of lymph node involvement</label>
        <picklist>
            <picklistValues>
                <fullName>Axillary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal mammary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supaclavicular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infraclavicular</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>pg_ResponseEvaluation_Id__c</fullName>
        <label>pg_ResponseEvaluation_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_status__c</fullName>
        <label>pg_status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Response Evaluation Form</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Evaluation Forms</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Complete_response_CR_Date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Complete_response_CR_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Complete_response_CR_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_of_clinical_assessment_Date_valid</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Date_of_clinical_assessment__c  &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Date_of_clinical_assessment__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_distant_progression_Date_valid</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>New_distant_progression_Date__c   &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>New_distant_progression_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_local_regional_recurrence_Date_valid</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>New_local_regional_recurrence_Date__c    &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>New_local_regional_recurrence_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partial_response_PR_Date_validation</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Partial_response_PR_Date__c    &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Partial_response_PR_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Palpable_Nodes</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Palpable_nodes__c, &apos;Yes&apos;) &amp;&amp; ISBLANK( TEXT(Matted_nodes__c))</errorConditionFormula>
        <errorDisplayField>Matted_nodes__c</errorDisplayField>
        <errorMessage>Matted Nodes is required.</errorMessage>
    </validationRules>
</CustomObject>